<resources>
    <string name="app_name">IntentActivity</string>
    <string name="name_string">Name(String)</string>
    <string name="mobile_number_long">Mobile Number(long)</string>
    <string name="id">ID</string>
    <string name="id_double">ID(Double)</string>
    <string name="m_or_f">M or F</string>
    <string name="gender_char">Gender(char)</string>
    <string name="age_number">Age(Number)</string>
    <string name="age">Age</string>
    <string name="intent_data_passing">Intent Data Passing</string>
    <string name="name">Name</string>
    <string name="above_information_is_correct_boolean">Above information is correct(Boolean)</string>
    <string name="salary_float">Salary(Float)</string>
    <string name="salary">Salary</string>
    <string name="register">Register</string>
</resources>