<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_data_passing"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_string"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_number"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_char"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/m_or_f"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="text"
        android:maxLength="1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_double"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number_long"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mobile Number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="10"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salary_float"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/above_information_is_correct_boolean"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="True or false"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        />
</LinearLayout>